--- a/index.html
+++ b/index.html
@@ -625,13 +625,19 @@
               value="true"
               class="form-check visually-hidden"
             />
-            <label for="policy" class="check-text"
+            <label for=" for=" for="user-privacy" class="check-text"
               ><span>
-                <svg class="check-icon" width="10" height="8">
+                <svg
+                  class="check-icon"
+                  width="10"
+                  height="8"
+                  id="user-privacy"
+                  name="user-privacy"
+                >
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              accept the terms and conditions of the
+              I accept the terms and conditions of the
               <a href="https://www.google.com/intl/uk/policies/privacy/"
                 >Privacy Policy</a
               ></label
