--- a/index.html
+++ b/index.html
@@ -621,22 +621,15 @@
             <input
               type="checkbox"
               name="policy"
-              id="policy"
+              id="user-privacy"
               value="true"
               class="form-check visually-hidden"
             />
-            <label for=" for=" for="user-privacy" class="check-text"
-              ><span>
-                <svg
-                  class="check-icon"
-                  width="10"
-                  height="8"
-                  id="user-privacy"
-                  name="user-privacy"
-                >
+            <label for="user-privacy" class="check-text"
+              ><span class="checkbox-area">
+                <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
-              </span>
               I accept the terms and conditions of the
               <a href="https://www.google.com/intl/uk/policies/privacy/"
                 >Privacy Policy</a
