--- a/index.html
+++ b/index.html
@@ -628,8 +628,8 @@
             <label for="user-privacy" class="check-text"
               ><span class="checkbox-area">
                 <svg class="check-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Vector"></use>
-                </svg>
+                  <use href="./images/icons.svg#icon-Vector"></use></svg
+              ></span>
               I accept the terms and conditions of the
               <a href="https://www.google.com/intl/uk/policies/privacy/"
                 >Privacy Policy</a
