--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
           <div class="modal-field">
             <input
               type="checkbox"
-              name="policy"
+              name="user-privacy"
               id="user-privacy"
               value="true"
               class="form-check visually-hidden"
@@ -631,7 +631,9 @@
                   <use href="./images/icons.svg#icon-Vector"></use></svg
               ></span>
               I accept the terms and conditions of the
-              <a href="https://www.google.com/intl/uk/policies/privacy/"
+              <a
+                class="privacy-policy-link"
+                href="https://www.google.com/intl/uk/policies/privacy/"
                 >Privacy Policy</a
               ></label
             >
