--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
             </div>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-field-comment">
             <label for="user-comment" class="form-label">Comment</label>
             <textarea
               class="modal-comment"
