--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-checkbox">
             <input
               type="checkbox"
               name="user-privacy"
@@ -626,10 +626,11 @@
               class="form-check visually-hidden"
             />
             <label for="user-privacy" class="check-text"
-              ><span class="checkbox-area">
-                <svg class="check-icon" width="10" height="8">
+              ><span class="checkbox-area"
+                ><svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use></svg
               ></span>
+
               I accept the terms and conditions of the
               <a
                 class="privacy-policy-link"
